recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:10: error: not found: value reculer
    reculer(length)
    ^